--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "generator-otp",
+  "name": "@sofiatechnology/generator-otp",
   "version": "1.0.0",
   "description": "A simple and secure OTP (One-Time Password) generator built with TypeScript. Supports time-based (TOTP) and counter-based (HOTP) OTPs for authentication and security purposes.",
-  "main": "dist/index.js",
+  "main": "./dist/src/index.js",
   "types": "dist/index.d.ts",
-  "author": "sofiadevgoma@gmail.com",
+  "type": "module",
+  "author": "SOFIA Tech (https://github.com/sofiatechnology)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sofiatechnology/generator-otp.git"
+    "url": "git://github.com/sofiatechnology/generator-otp.git"
   },
+  "files": [
+    "dist"
+  ],
   "bugs": {
     "url": "https://github.com/sofiatechnology/generator-otp/issues"
   },
